argocd/apps/strapi/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: strapi
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: strapi
  template:
    metadata:
      labels:
        app: strapi
    spec:
      imagePullSecrets:
        - name: harbor-credentials
      containers:
        - name: strapi
          image: harbor.tail4d334.ts.net/library/strapi:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 1337
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          resources:
            requests:
              cpu: 100m
              memory: 500Mi
            limits:
              cpu: 1000m
              memory: 4Gi
          volumeMounts:
            - name: strapi-storage
              mountPath: /opt/app/public/uploads
            - name: yarn-cache
              mountPath: /tmp
      volumes:
        - name: strapi-storage
          persistentVolumeClaim:
            claimName: strapi-pvc
        - name: yarn-cache
          emptyDir: {}
